@@ -1,5 +1,6 @@
 Changes for 1.8.1
 
+ - [ZBX-1563] fixed error when view history for log type item (Vedmak)
  - [ZBX-1556] fixed importing graphs with items that does not exist in system (Vedmak)
  - [ZBX-1515] fixed json encode/decode with mb overload enabled (Aly)
  - [ZBX-1623] fixed no proxy listed when admin edits host (Vedmak)
